# connesis_ml_classification

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  run.sh
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: prd.md
src/: __init__.py
src/models/: model_factory.py  trainer.py
src/pages/: model_builder.py  prediction_interface.py
src/utils/: data_loader.py  gpu_support.py  logger.py  preprocessing.py
src/visualization/: __init__.py  plots.py
